--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "express-handlebars": "^8.0.1",
+    "mongoose": "^8.7.1",
     "nodemon": "^3.1.6",
     "socket.io": "^4.7.5",
     "uuid": "^10.0.0"
